Added and updated expense validation
